--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^17.3.1",
+    "express": "^5.2.1",
     "node-telegram-bot-api": "^0.63.0"
   },
   "name": "emotion_bot",
